# epgi

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md
doc/: abandoned_ideas.md  (+25 more)
epgi-2d/: Cargo.toml
epgi-2d/src/: affine.rs  box.rs  lib.rs  paint.rs  paint_command.rs  paint_context.rs  shape.rs  template.rs  templates.rs  text.rs  vello.rs  vello_integrations.rs
epgi-2d/src/templates/: affine2d_multi_child.rs  box_multi_child.rs  box_proxy.rs  box_single_child.rs  shifted_box.rs
epgi-2d/src/text/: box_multi_line_adapter.rs  multi_line.rs  multi_line_box_adapter.rs  paragraph.rs  render_text.rs  rich_text.rs  single_line.rs  style.rs
epgi-2d/src/vello/: encoding.rs  paint_ctx.rs  root.rs
epgi-2d/src/vello_integrations/: canvas.rs  encoding.rs  into_kurbo.rs  paint_ctx.rs  paint_ctx_parallel.rs  root.rs
epgi-common/: Cargo.toml
epgi-common/src/: animation.rs  basic.rs  color_box.rs  constrained_box.rs  frame_info.rs  gesture.rs  lib.rs  phantom_box.rs  text.rs  utils.rs
epgi-common/src/animation/: animation_controller.rs  animation_frame.rs  curves.rs  implicit_animation.rs  interp.rs  lerp.rs  tween.rs
epgi-common/src/animation/curves/: cubic.rs  interval.rs  saw_tooth.rs
epgi-common/src/basic/: align.rs  animated_container.rs  center.rs  color_box.rs  colored_box.rs  column.rs  constrained_box.rs  container.rs  custom_paint.rs  flex.rs  flexible.rs  padding.rs  phantom_box.rs  positioned.rs  row.rs  stack.rs
epgi-common/src/gesture/: arena.rs  detector.rs  event.rs  manager.rs  member.rs  pointer_event_handler.rs  recognizers.rs
epgi-common/src/gesture/manager/: arena.rs
epgi-common/src/gesture/recognizers/: tap.rs
epgi-common/src/physics/: simulation.rs
epgi-common/src/text/: box_adapter_multi_line.rs  box_multi_line_adapter.rs  multi_line.rs  multi_line_adapter_box.rs  multi_line_box_adapter.rs  rich_text.rs  text.rs
epgi-core/: Cargo.toml  README.md
epgi-core/src/: async.rs  common.rs  debug.rs  foundation.rs  hooks.rs  integrations.rs  lib.rs  nodes.rs  painting.rs  rendering.rs  scheduler.rs  sync.rs  template.rs  tree.rs
epgi-core/src/async/: build.rs  build_context.rs
epgi-core/src/common/: build_context.rs  component.rs  core_nodes.rs  element.rs  hook.rs  layer.rs  proxy.rs  reconciler.rs  render.rs  repaint_boundary.rs  single_child.rs  single_child_render.rs  suspense.rs  widget.rs
epgi-core/src/common/core_nodes/: root.rs  suspense.rs
epgi-core/src/common/element/: async_queue.rs  context.rs  provider.rs  snapshot.rs
epgi-core/src/foundation/: as_any.rs  constants.rs  container.rs  error.rs  executor.rs  key.rs  mutex_access.rs  node_access.rs  parallel.rs  primitives.rs  protocol.rs  provide.rs  ptr_eq.rs  query_interface.rs  threadpool.rs  try_result.rs  type_key.rs  utils.rs  vec_push_last.rs
epgi-core/src/foundation/primitives/: arc.rs  collections.rs  concurrent.rs  lock.rs  never.rs
epgi-core/src/foundation/utils/: assert.rs  count_tts.rs  max.rs  read_providers.rs  set_if_changed.rs
epgi-core/src/hooks/: use_effect.rs  use_future.rs  use_memo.rs  use_reducer.rs  use_state.rs  use_transition.rs
epgi-core/src/integrations/: vello.rs  with_glazier.rs
epgi-core/src/nodes/: component.rs  consumer.rs  provider.rs  proxy.rs  repaint_boundary.rs  single_child_render.rs  single_child_render_element.rs  suspendable_consumer.rs  suspense.rs
epgi-core/src/painting/: canvas.rs  shape.rs
epgi-core/src/rendering/: canvas.rs  layer_group.rs  painting_context.rs  shape.rs
epgi-core/src/scheduler/: batch.rs  handle.rs  job.rs  job_batcher.rs  lane.rs  main_loop.rs  scheduler.rs
epgi-core/src/sync/: build.rs  build_async.rs  build_context.rs  build_scheduler.rs  commit_barrier.rs  composite.rs  composition.rs  hit_test.rs  lane_scheduler.rs  layout.rs  mark.rs  paint.rs  scheduler.rs  subtree_results.rs  tree_scheduler.rs
epgi-core/src/sync/build_async/: cancel.rs  reorder_work.rs
epgi-core/src/sync/build_scheduler/: lane_scheduler.rs
epgi-core/src/sync/composite/: composite.rs
epgi-core/src/sync/lane_scheduler/: commit_barrier.rs
epgi-core/src/sync/layout/: layout.rs
epgi-core/src/sync/paint/: paint.rs
epgi-core/src/template/: adapter.rs  element.rs  leaf.rs  multi_child.rs  proxy.rs  render.rs  shifted.rs  single_child.rs
epgi-core/src/tree/: build_context.rs  element.rs  hit_test.rs  hook.rs  layer.rs  reconcile_item.rs  reconciler.rs  render.rs  widget.rs  work.rs
epgi-core/src/tree/element/: async_queue.rs  context.rs  impl.rs  mark.rs  node.rs  provider.rs  render_element.rs  render_or_unit.rs  snapshot.rs  snapshot_new.rs  waker.rs
epgi-core/src/tree/element/impl/: element_impl.rs  impl_provide_element.rs  impl_reconcile.rs  impl_render_element.rs
epgi-core/src/tree/hit_test/: config.rs  entry.rs  node.rs
epgi-core/src/tree/layer/: component.rs  context.rs  fragment.rs  iterator.rs  mark.rs  node.rs
epgi-core/src/tree/render/: context.rs  hit_test.rs  impl.rs  layer_cache.rs  layer_child.rs  layer_iterator.rs  layer_or_unit.rs  layer_paint.rs  mark.rs  node.rs  parent_data.rs  render_cache.rs  render_object.rs
epgi-glazier/: Cargo.toml
epgi-glazier/src/: app_main.rs  lib.rs  pointer_converter.rs  scheduler_extension.rs  state.rs
epgi-material/: Cargo.toml
epgi-material/src/: app.rs  color_scheme.rs  lib.rs  progress_indicator.rs  scaffold.rs  text_theme.rs  theme_data.rs  typography.rs
epgi-winit/: Cargo.toml
epgi-winit/src/: app_main.rs  lib.rs  pointer_event_converter.rs  scheduler_extension.rs  stat.rs  utils.rs
examples/glazier-simple/: Cargo.toml
examples/glazier-simple/src/: main.rs
examples/sunburst/: Cargo.toml
examples/sunburst/src/: main.rs  ring.rs
examples/sunburst/src/ring/: adapter.rs  align.rs  aligned_ring.rs  box_adapter_ring.rs  cascaded_ring.rs  center.rs  centered_ring.rs  colored_ring.rs  constrained_ring.rs  flex.rs  flexed_ring.rs  padded_ring.rs  padding.rs  phantom_ring.rs  ring_flex.rs  ring_slice.rs  ring_track.rs  sectored_ring.rs  slice.rs  track.rs
examples/winit-simple/: Cargo.toml
examples/winit-simple/src/: main.rs
(+21 files in other folders)
