[workspace]
members = [
    "epgi-core",
    "epgi-common",
    "epgi-2d",
    # # Glazier was broken due to wgpu updates
    # "epgi-glazier",
    "epgi-winit",
    # We have to manually expand each sub-item to exclude defunt glazier example https://github.com/rust-lang/cargo/issues/6745
    "examples/winit-simple",
    "optargs",
]
resolver = "2"


[workspace.package]
edition = "2021"
rust-version = "1.70"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"

[workspace.dependencies.epgi-core]
package = "epgi-core"
path = "./epgi-core"

[workspace.dependencies.epgi-2d]
package = "epgi-2d"
path = "./epgi-2d"

[workspace.dependencies.epgi-common]
package = "epgi-common"
path = "./epgi-common"

# [workspace.dependencies.epgi-glazier]
# package = "epgi-glazier"
# path = "./epgi-glazier"

[workspace.dependencies.epgi-winit]
package = "epgi-winit"
path = "./epgi-winit"

[workspace.dependencies.optargs]
package = "optargs"
path = "./optargs"


[workspace.dependencies]
hashbrown = { version = "0.14", features = ["rayon"] }
vello = { git = "https://github.com/linebender/vello", rev = "6fa114c020f8656947e283bdf4bed96fe7a54c70" }
vello_encoding = { git = "https://github.com/linebender/vello", rev = "6fa114c020f8656947e283bdf4bed96fe7a54c70" }
peniko = "0.1.0"
parley = { git = "https://github.com/dfrg/parley", rev = "1940d1ae9f2a9b44b7c18967147ffa7d345fdafd" }
glazier = { git = "https://github.com/linebender/glazier", rev = "8d2a4b2cafd5e6be49bfb4ac8d0bd26fe02f036e", default-features = false, features = [
    "accesskit",
    "x11",
] }
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.19.0"
rayon = "1.9"
log = "0.4.21"
