[workspace]
members = [
    "epgi-core",
    "epgi-common",
    "epgi-2d",
    # # Glazier was broken due to wgpu updates
    # "epgi-glazier",
    "epgi-macro",
    "epgi-material",
    "epgi-winit",
    # We have to manually expand each sub-item to exclude defunt glazier example https://github.com/rust-lang/cargo/issues/6745
    "examples/winit-simple",
    "examples/rocket-science", "examples/bouncing-blocks", "examples/sunburst",
]
resolver = "2"


[workspace.package]
edition = "2021"
rust-version = "1.75"
keywords = ["graphics"]
license = "MIT OR Apache-2.0"

[workspace.dependencies.epgi-core]
package = "epgi-core"
path = "./epgi-core"

[workspace.dependencies.epgi-2d]
package = "epgi-2d"
path = "./epgi-2d"

[workspace.dependencies.epgi-common]
package = "epgi-common"
path = "./epgi-common"

# [workspace.dependencies.epgi-glazier]
# package = "epgi-glazier"
# path = "./epgi-glazier"

[workspace.dependencies.epgi-material]
package = "epgi-material"
path = "./epgi-material"

[workspace.dependencies.epgi-winit]
package = "epgi-winit"
path = "./epgi-winit"

[workspace.dependencies.epgi-macro]
package = "epgi-macro"
path = "./epgi-macro"


[workspace.dependencies]
hashbrown = { version = "0.14", features = ["rayon"] }
vello = "0.2.1"
vello_encoding = "0.2.1"
peniko = "0.1.0"
masonry = "0.2.0"
parley = "0.1.0"
winit = "0.30.4"
dpi = "0.1.1"
wgpu = "0.20.1"
rayon = "1.9"
log = "0.4.21"
tracing = "0.1.40"
typed-builder = "0.18.1"
