[package]
edition = "2021"
name = "epgi-common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4"
epgi-2d = { workspace = true }
epgi-core = { workspace = true }
glazier = { workspace = true }
hashbrown = { workspace = true }
lazy_static = "1.4"
smallvec = { version = "1.10", features = [
  "union",
  "const_generics",
  "const_new",
] }
typed-builder = { workspace = true }
epgi-macro = { workspace = true }
