[package]
name = "epgi-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-channel = "1.9"
crossbeam = "0.8"
either = "1.8"
event-listener = "2.5"
futures = "0.3.27"
hashbrown = "0.14"
kurbo = "0.9"
linear-map = "1.2.0"
portable-atomic = "1.0"
rayon="1.7"
smallvec = {version = "1.10", features = ["union", "const_generics", "const_new"]}
accesskit = "0.9"
# tokio = { version = "1.18", features = ["sync"] }

[dependencies.parley]
git = "https://github.com/dfrg/parley"
rev = "2371bf4b702ec91edee2d58ffb2d432539580e1e"

[dependencies.vello]
git = "https://github.com/linebender/vello"
rev = "006faab69fc519c9c7ed6002be740914efad9ffe"
features = []

[dependencies.vello_encoding]
git = "https://github.com/linebender/vello"
rev = "006faab69fc519c9c7ed6002be740914efad9ffe"

[dependencies.glazier]
git = "https://github.com/linebender/glazier"
rev = "51eb418511790309b90b0d9838e4d91fc11d84d3"
default-features = false
features = ["accesskit", "x11"]