[package]
name = "epgi-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vello"]
vello = []

[dependencies]

async-channel = "1.9"
crossbeam = "0.8"
either = "1.8"
event-listener = "2.5"
futures = "0.3.27"
hashbrown = "0.14"
linear-map = "1.2.0"
portable-atomic = "1.0"
rayon = { workspace = true }
smallvec = { version = "1.10", features = [
    "union",
    "const_generics",
    "const_new",
] }


vello_encoding = { workspace = true }
