[package]
name = "epgi-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["vello"]
vello = []

[dependencies]

async-channel = "1.9"
crossbeam = "0.8"
derivative = "2.2.0"
either = "1.9"
event-listener = "2.5"
futures = "0.3.27"
hashbrown = { workspace = true }
linear-map = "1.2.0"
portable-atomic = "1.0"
rayon = { workspace = true }
replace_with = "0.1"
smallvec = { version = "1.13", features = [
  "union",
  "const_generics",
  "const_new",
] }
lazy_static = "1.4"
# vello_encoding = { workspace = true }
