[package]
name = "epgi-glazier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accesskit = { workspace = true }
epgi-core = { workspace = true }
epgi-2d = { workspace = true }
glazier = { workspace = true }
vello = { workspace = true }
