[package]
name = "epgi-glazier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[features]
default = ["x11"]
x11 = ["glazier/x11"]
wayland = ["glazier/wayland"]

[dependencies]
accesskit = { workspace = true }
epgi-core = { workspace = true }
epgi-2d = { workspace = true }
epgi-common = { workspace = true }
glazier = { workspace = true, features = ["accesskit"] }
vello = { workspace = true }
vello_encoding = { workspace = true }
wgpu = { workspace = true }
futures = "0.3.27"
rayon = { workspace = true }

[profile.dev]
panic = 'abort'
