[package]
name = "epgi-glazier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[features]
default = ["x11"]
x11 = ["glazier/x11"]
wayland = ["glazier/wayland"]

[dependencies]
accesskit = "0.12"
epgi-core = { workspace = true }
epgi-2d = { workspace = true }
epgi-common = { workspace = true }
glazier = { workspace = true, features = ["accesskit"] }
vello = { workspace = true }
vello_encoding = { workspace = true }
wgpu = { workspace = true }
futures = "0.3.27"
rayon = { workspace = true }

#to patch glazier
rwh_06 = { package = "raw-window-handle", version = "0.6", features = ["std"] }

[profile.dev]
panic = 'abort'
