[package]
name = "epgi-material"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
bitflags = "2.4"
epgi-2d = { workspace = true }
epgi-common = { workspace = true }
epgi-core = { workspace = true }
hashbrown = { workspace = true }
lazy_static = "1.4"
smallvec = { version = "1.10", features = [
  "union",
  "const_generics",
  "const_new",
] }
typed-builder = { workspace = true }
epgi-macro = { workspace = true }
