[package]
name = "epgi-winit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true


[features]
default = ["x11", "taffy"]

x11 = ["winit/x11"]
wayland = ["winit/wayland"]
taffy = ["dep:taffy"]

[dependencies]
epgi-core = { workspace = true }
epgi-2d = { workspace = true }
epgi-common = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
vello = { workspace = true }
vello_encoding = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true, features = ["rwh_05"] }
futures = "0.3.27"
rayon = { workspace = true }
taffy = { version = "0.4.0", optional = true }

[profile.dev]
panic = 'abort'
