[package]
name = "epgi-winit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
derivative = "2.2.0"
epgi-core = { workspace = true }
epgi-2d = { workspace = true }
epgi-common = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
pretty_env_logger = "0.5.0"
vello = { workspace = true }
vello_encoding = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
futures = "0.3.27"
rayon = { workspace = true }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "time"], optional = true }
time = { version = "0.3.36", features = ["macros", "formatting"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
typed-builder = { workspace = true }

[profile.dev]
panic = 'abort'
